--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
     <%= yield :head %>
 
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
@@ -23,6 +23,13 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Entrar', new_user_session_path %>
+      <%= link_to 'Cadastrar', new_user_registration_path %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
