--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
   <body>
     <% if user_signed_in? %>
-      <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
+      <%= link_to 'Sair', destroy_user_session_path, data: { turbo_method: :delete } %>
     <% else %>
       <%= link_to 'Entrar', new_user_session_path %>
       <%= link_to 'Cadastrar', new_user_registration_path %>
