--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -1,5 +1,35 @@
 <h1>Lista de Hotéis</h1>
 
+<!-- FORMULÁRIO DE BUSCA -->
+<%= form_with url: hotels_path, method: :get, local: true do |f| %>
+  <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+    <div>
+      <%= f.label :nome, "Nome" %><br>
+      <%= f.text_field :nome, value: params[:nome] %>
+    </div>
+
+    <div>
+      <%= f.label :cidade, "Cidade" %><br>
+      <%= f.text_field :cidade, value: params[:cidade] %>
+    </div>
+
+    <div>
+      <%= f.label :categoria, "Categoria" %><br>
+      <%= f.select :categoria, options_for_select(['Luxo','Praia','Montanha','Urbano','Campo'], params[:categoria]), include_blank: "Todos" %>
+    </div>
+  </div>
+
+  <div style="margin-top: 10px;">
+    <%= f.submit "Pesquisar" %>
+    <%= link_to "Limpar Filtros", hotels_path, style: "margin-left:10px;" %>
+  </div>
+<% end %>
+
+<br>
+
+<%= link_to 'Novo Hotel', new_hotel_path %>
+
+<!-- TABELA DE HOTEIS -->
 <table>
   <thead>
     <tr>
@@ -8,6 +38,7 @@
       <th>Endereço</th>
       <th>Telefone</th>
       <th>Categoria</th>
+      <th colspan="3">Ações</th>
     </tr>
   </thead>
 
@@ -19,10 +50,17 @@
         <td><%= hotel.endereco %></td>
         <td><%= hotel.telefone %></td>
         <td><%= hotel.categoria %></td>
+
+        <td><%= link_to 'Mostrar', hotel_path(hotel) %></td>
+        <td><%= link_to 'Editar', edit_hotel_path(hotel) %></td>
+        <td>
+          <%= button_to 'Excluir', hotel_path(hotel), method: :delete, form: { onsubmit: "return confirm('Tem certeza que deseja excluir este hotel?');" } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to "Voltar", "javascript:history.back()" %>
+<%= paginate @hotels %>
+<br>
+<%= link_to "Página inicial", welcome_index_path %>
 
