--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,15 @@
 
   <body>
     <% if user_signed_in? %>
+       <p>Olá, <%= current_user.email %>!</p>
       <%= link_to 'Sair', destroy_user_session_path, data: { turbo_method: :delete } %>
     <% else %>
       <%= link_to 'Entrar', new_user_session_path %>
       <%= link_to 'Cadastrar', new_user_registration_path %>
+    <% end %>
+
+    <% flash.each do |key, message| %>
+      <div class="flash <%= key %>"><%= message %></div>
     <% end %>
 
     <%= yield %>
